--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 task libs(type: Jar) {
     manifest { }
-    archiveBaseName = 'agent-libs'
+    archiveBaseName = 'libs'
     from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
 }
