--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -15,7 +15,8 @@ dependencies {
         implementation 'com.google.code.gson:gson:2.8.6'
         implementation 'com.google.guava:guava:28.1-jre'
         implementation 'org.apache.kafka:kafka-clients:2.4.0'
-        implementation 'org.scala-lang:scala-library:2.13.1'
+        implementation 'org.scala-lang:scala-library:2.12.1'
+        implementation 'org.apache.spark:spark-core_2.12:2.4.5'
 }
 
 task libs(type: Jar) {
