--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,8 +19,12 @@ RUN apt-get install -qy locales
 RUN apt-get install -qy vim
 RUN apt-get install -qy zip unzip
 RUN apt-get install -qy git
+RUN apt-get install curl
 WORKDIR /root
+RUN curl -O https://downloads.apache.org/spark/spark-2.4.5/spark-2.4.5-bin-hadoop2.7.tgz
+RUN tar -xvzf spark-2.4.5-bin-hadoop2.7.tgz
 RUN git clone --progress --verbose https://github.com/oiraqi/immunizer-monitor.git
+RUN git clone --progress --verbose https://github.com/oiraqi/immunizer-analyze.git
 WORKDIR /root/immunizer-monitor/scripts
 RUN ./build.sh
 WORKDIR /root
