--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -18,6 +18,7 @@ dependencies {
         implementation 'org.scala-lang:scala-library:2.12.1'
         implementation 'org.apache.spark:spark-core_2.12:2.4.5'
         implementation 'org.apache.ignite:ignite-core:2.7.6'
+        implementation 'org.apache.ignite:ignite-spark:2.7.6'
 }
 
 task libs(type: Jar) {
