--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -17,7 +17,7 @@ dependencies {
         implementation 'org.apache.kafka:kafka-clients:2.4.0'
         implementation 'org.scala-lang:scala-library:2.12.1'
         implementation 'org.apache.spark:spark-core_2.12:2.4.5'
-        implementation 'org.apache.ignite:ignite-core:2.7.6'
+        //implementation 'org.apache.ignite:ignite-core:2.7.6'
         implementation 'org.apache.ignite:ignite-spark:2.7.6'
 }
 
