--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -15,10 +15,10 @@ dependencies {
         implementation 'com.google.code.gson:gson:2.2.4'
         implementation 'com.google.guava:guava:28.1-jre'
         implementation 'org.apache.kafka:kafka-clients:2.4.0'
-        //implementation 'org.scala-lang:scala-library:2.12.1'
-        //implementation 'org.apache.spark:spark-core_2.12:2.4.5'
+        implementation 'org.scala-lang:scala-library:2.12.1'
+        implementation 'org.apache.spark:spark-core_2.12:2.4.5'
         //implementation 'org.apache.ignite:ignite-core:2.8.0'
-        implementation 'org.apache.ignite:ignite-spark-2.4:2.8.0'
+        //implementation 'org.apache.ignite:ignite-spark-2.4:2.8.0'
 }
 
 task libs(type: Jar) {
