--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -5,7 +5,8 @@ plugins {
 
 group = 'org.immunizer'
 version = '1.0'
-sourceCompatibility = '1.8'
+sourceCompatibility = 11
+targetCompatibility = 11
 
 repositories {
         mavenCentral()
