--- a/framework/build.gradle
+++ b/framework/build.gradle
@@ -15,9 +15,9 @@ repositories {
 dependencies {
         implementation 'com.google.code.gson:gson:2.2.4'
         implementation 'com.google.guava:guava:28.1-jre'
-        implementation 'org.apache.spark:spark-streaming_2.12:3.0.2'
-        implementation 'org.apache.spark:spark-streaming-kafka-0-10_2.12:3.0.2'
-        implementation 'org.apache.ignite:ignite-spark-2.4:2.8.0'
+        implementation 'org.apache.spark:spark-streaming_2.11:2.4.7'
+        implementation 'org.apache.spark:spark-streaming-kafka-0-10_2.11:2.4.7'
+        implementation 'org.apache.ignite:ignite-spark:2.10.0'
 }
 
 task libs(type: Jar) {
